force-app/main/default/objects/SubscriptionLineItem__c/SubscriptionLineItem__c.object-meta.xml
<CustomObject>
    <label>Subscription Line Item</label>
    <nameField>
        <label>Subscription Line Item Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscription Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>