force-app/main/default/objects/SubscriptionLineItem__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Subscription Line Items</relationshipLabel>
    <relationshipName>SubscriptionLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>