force-app/main/default/objects/SubscriptionLineItem__c/fields/BillingPeriodAlignment__c.field-meta.xml
<CustomField>
    <fullName>BillingPeriodAlignment__c</fullName>
    <label>Billing Period Alignment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>