force-app/main/default/objects/SubscriptionLineItem__c/fields/BillingStartDate__c.field-meta.xml
<CustomField>
    <fullName>BillingStartDate__c</fullName>
    <formula>IF( BillingPeriodAlignment__c = &quot;AlignToSubscriptionStart&quot;,  Subscription__r.SubscriptionStartDate__c ,  EffectiveStartDate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Start Date</label>
    <type>Date</type>
</CustomField>