force-app/main/default/objects/SubscriptionLineItem__c/fields/CalcMRR__c.field-meta.xml
<CustomField>
    <fullName>CalcMRR__c</fullName>
    <formula>Product__r.MRR__c *  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated MRR (EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>