force-app/main/default/objects/SubscriptionLineItem__c/fields/days_until_invalid__c.field-meta.xml
<CustomField>
    <fullName>days_until_invalid__c</fullName>
    <description>https://jira.orderbird.com/browse/CRMT-3270</description>
    <formula>Subscription__r.AmendmentEffectiveDate__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>days until invalid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>