force-app/main/default/objects/SubscriptionLineItem__c/fields/Device_Upsell_Today__c.field-meta.xml
<CustomField>
    <fullName>Device_Upsell_Today__c</fullName>
    <formula>Quantity__c &gt; PrecedingSLI__r.Quantity__c
&amp;&amp;
Subscription__r.Status__c = &quot;Active&quot;
&amp;&amp;
QuoteLineItem__r.Quote.AcceptedDate__c = TODAY()
&amp;&amp;
NOT(CONTAINS(Product__r.Name, &quot;Covid&quot;))
&amp;&amp;
CONTAINS(Product__r.ProductCategory__r.ProductType__c, &quot;Device&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Device Upsell Today</label>
    <type>Checkbox</type>
</CustomField>