force-app/main/default/objects/SubscriptionLineItem__c/fields/DMRC__c.field-meta.xml
<CustomField>
    <fullName>DMRC__c</fullName>
    <label>DMRC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>