force-app/main/default/objects/SubscriptionLineItem__c/fields/DTCV__c.field-meta.xml
<CustomField>
    <fullName>DTCV__c</fullName>
    <label>DTCV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>