force-app/main/default/objects/SubscriptionLineItem__c/fields/ESD_Matches_SubTSD__c.field-meta.xml
<CustomField>
    <fullName>ESD_Matches_SubTSD__c</fullName>
    <formula>MONTH(EffectiveStartDate__c) = MONTH(Subscription__r.TermStartDate__c)
&amp;&amp;
DAY(EffectiveStartDate__c) = DAY(Subscription__r.TermStartDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ESD Matches SubTSD</label>
    <type>Checkbox</type>
</CustomField>