force-app/main/default/objects/SubscriptionLineItem__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <formula>IF( Product__r.BillingPeriod__c &lt;&gt; &apos;Specific_Months&apos;, 
CASE(Product__r.BillingPeriod__c,
&quot;Annual&quot;, &quot;Year&quot;,
&quot;Three_Years&quot;, &quot;Three_Year&quot;,
Product__r.BillingPeriod__c
),
CASE( Product__r.SpecificBillingPeriod__c,
&quot;1&quot;, &apos;Month&apos;,
&quot;3&quot;, &apos;Quarter&apos;,
&quot;12&quot;, &apos;Year&apos;,
&quot;36&quot;, &apos;Three_Year&apos;,
&quot;120&quot;, &apos;Ten_Year&apos;,
&apos;Unknown&apos;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Frequency</label>
    <type>Text</type>
</CustomField>