force-app/main/default/objects/SubscriptionLineItem__c/fields/Invoice_Upcoming_Special__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Upcoming_Special__c</fullName>
    <formula>Frequency__c = &apos;Month&apos;
||
(
Frequency__c = &apos;Year&apos; &amp;&amp; (MONTH(BillingStartDate__c) = 1 || MONTH(BillingStartDate__c) = 2 || (MONTH(BillingStartDate__c) = 12 &amp;&amp; DAY(BillingStartDate__c) &gt; 18))
)||
(
Frequency__c = &apos;Three_Year&apos; &amp;&amp; ((MONTH(BillingStartDate__c) = 1 &amp;&amp; YEAR(BillingStartDate__c) = 2018) || (MONTH(BillingStartDate__c) = 2 &amp;&amp; YEAR(BillingStartDate__c) = 2018) || (MONTH(BillingStartDate__c) = 12 &amp;&amp; DAY(BillingStartDate__c) &gt; 18 &amp;&amp; YEAR(BillingStartDate__c) = 2017)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Upcoming Special</label>
    <type>Checkbox</type>
</CustomField>