force-app/main/default/objects/SubscriptionLineItem__c/fields/IsBsdCurrent__c.field-meta.xml
<CustomField>
    <fullName>IsBsdCurrent__c</fullName>
    <formula>IF(BillingStartDate__c &gt; TODAY(),

CASE(
Subscription__r.Status__c,
&quot;Active&quot;,
IF(
(
PrecedingSLI__r.Quantity__c &lt;&gt; Quantity__c
|| PrecedingSLI__r.Price__c &lt;&gt; Price__c
) &amp;&amp; PrecedingSLI__r.Subscription__r.AmendmentEffectiveDate__c &gt; BillingStartDate__c,
0,
IF(
EffectiveStartDate__c &gt; BillingStartDate__c || (
ISBLANK(PrecedingSLI__c) &amp;&amp; Subscription__r.PrecedingSubscription__r.AmendmentEffectiveDate__c &gt; BillingStartDate__c
),
0,
IF(
Subscription__r.TermType__c == &quot;TERMED&quot; &amp;&amp;
Subscription__r.TermEndDate__c &lt; BillingStartDate__c,
0,
1
)
)
),
&quot;Expired&quot;,
IF(
(
SupercedingSLI__r.Quantity__c &lt;&gt; Quantity__c
|| SupercedingSLI__r.Price__c &lt;&gt; Price__c
) &amp;&amp; Subscription__r.AmendmentEffectiveDate__c &gt; BillingStartDate__c,
1,
IF(
ISBLANK(SupercedingSLI__c) &amp;&amp; Subscription__r.AmendmentEffectiveDate__c &gt; BillingStartDate__c,
1,
0
)
),
IF(
EffectiveStartDate__c &lt;= BillingStartDate__c &amp;&amp; EffectiveEndDate__c &gt;= BillingStartDate__c,
1,
0
)
) == 1,

CASE(
Subscription__r.Status__c,
&quot;Active&quot;,
IF(
(
PrecedingSLI__r.Quantity__c &lt;&gt; Quantity__c
|| PrecedingSLI__r.Price__c &lt;&gt; Price__c
) &amp;&amp; PrecedingSLI__r.Subscription__r.AmendmentEffectiveDate__c &gt; TODAY(),
0,
IF(
EffectiveStartDate__c &gt; TODAY() || (
ISBLANK(PrecedingSLI__c) &amp;&amp; Subscription__r.PrecedingSubscription__r.AmendmentEffectiveDate__c &gt; TODAY()
),
0,
IF(
Subscription__r.TermType__c == &quot;TERMED&quot; &amp;&amp;
Subscription__r.TermEndDate__c &lt; TODAY(),
0,
1
)
)
),
&quot;Expired&quot;,
IF(
(
SupercedingSLI__r.Quantity__c &lt;&gt; Quantity__c
|| SupercedingSLI__r.Price__c &lt;&gt; Price__c
) &amp;&amp; Subscription__r.AmendmentEffectiveDate__c &gt; TODAY(),
1,
IF(
ISBLANK(SupercedingSLI__c) &amp;&amp; Subscription__r.AmendmentEffectiveDate__c &gt; TODAY(),
1,
0
)
),
IF(
EffectiveStartDate__c &lt;= TODAY() &amp;&amp; EffectiveEndDate__c &gt;= TODAY(),
1,
0
)
) == 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is BSD Current</label>
    <type>Checkbox</type>
</CustomField>