force-app/main/default/objects/SubscriptionLineItem__c/fields/IsLastSegment__c.field-meta.xml
<CustomField>
    <fullName>IsLastSegment__c</fullName>
    <defaultValue>true</defaultValue>
    <label>IsLastSegment</label>
    <type>Checkbox</type>
</CustomField>