force-app/main/default/objects/SubscriptionLineItem__c/fields/LicensedDevices__c.field-meta.xml
<CustomField>
    <fullName>LicensedDevices__c</fullName>
    <formula>Product__r.LicensedDevices__c * Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Licensed Devices</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>