force-app/main/default/objects/SubscriptionLineItem__c/fields/OriginalSLI__c.field-meta.xml
<CustomField>
    <fullName>OriginalSLI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Subscription Line Item</label>
    <referenceTo>SubscriptionLineItem__c</referenceTo>
    <relationshipLabel>Subscription Line Items (Original Subscription Line Item)</relationshipLabel>
    <relationshipName>Subscription_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>