force-app/main/default/objects/SubscriptionLineItem__c/fields/PrecedingSLI__c.field-meta.xml
<CustomField>
    <fullName>PrecedingSLI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preceding SLI</label>
    <referenceTo>SubscriptionLineItem__c</referenceTo>
    <relationshipLabel>Subscription Line Items</relationshipLabel>
    <relationshipName>PrecedingSLIs</relationshipName>
    <type>Lookup</type>
</CustomField>