force-app/main/default/objects/SubscriptionLineItem__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Subscription Line Items</relationshipLabel>
    <relationshipName>Subscription_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>