force-app/main/default/objects/SubscriptionLineItem__c/fields/Product_category__c.field-meta.xml
<CustomField>
    <fullName>Product_category__c</fullName>
    <description>Used for data analysis in the context of Ctrl+Shift CDS project</description>
    <formula>Product__r.ProductCategory__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product category</label>
    <type>Text</type>
</CustomField>