force-app/main/default/objects/SubscriptionLineItem__c/fields/ProductGeneration__c.field-meta.xml
<CustomField>
    <fullName>ProductGeneration__c</fullName>
    <formula>Product__r.ProductCategory__r.ProductGeneration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Generation</label>
    <type>Text</type>
</CustomField>