force-app/main/default/objects/SubscriptionLineItem__c/fields/Quote_Accepted_Today__c.field-meta.xml
<CustomField>
    <fullName>Quote_Accepted_Today__c</fullName>
    <formula>QuoteAcceptedDate__c = TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Accepted Today</label>
    <type>Checkbox</type>
</CustomField>