force-app/main/default/objects/SubscriptionLineItem__c/fields/QuoteAcceptedDate__c.field-meta.xml
<CustomField>
    <fullName>QuoteAcceptedDate__c</fullName>
    <formula>QuoteLineItem__r.Quote.AcceptedDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Accepted Date</label>
    <type>Date</type>
</CustomField>