force-app/main/default/objects/SubscriptionLineItem__c/fields/Status_Active_Service__c.field-meta.xml
<CustomField>
    <fullName>Status_Active_Service__c</fullName>
    <formula>IF(
IsCurrent__c
&amp;&amp;
NOT(CONTAINS(Product__r.Name,&quot;subsidy&quot;))
&amp;&amp; (
 Product__r.ProductCategory__r.ProductType__c  = &quot;POS Service&quot;
||
 Product__r.ProductCategory__r.ProductType__c  = &quot;POS Service+Device&quot;
),1,0)</formula>
    <label>Status Active Service</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>