force-app/main/default/objects/SubscriptionLineItem__c/fields/Status_Future_Customer__c.field-meta.xml
<CustomField>
    <fullName>Status_Future_Customer__c</fullName>
    <formula>IF(EffectiveStartDate__c &gt; TODAY()
&amp;&amp;
Subscription__r.Status__c &lt;&gt; &quot;Expired&quot;
&amp;&amp;
Subscription__r.Status__c &lt;&gt; &quot;Cancelled&quot;
&amp;&amp; (
Product__r.ProductCategory__r.ProductType__c = &quot;POS Service&quot;
||
Product__r.ProductCategory__r.ProductType__c = &quot;POS Device&quot;
||
Product__r.ProductCategory__r.ProductType__c = &quot;POS Service+Device&quot;
),1,0)</formula>
    <label>Status Future Customer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>