force-app/main/default/objects/SubscriptionLineItem__c/fields/Status_Past_Customer__c.field-meta.xml
<CustomField>
    <fullName>Status_Past_Customer__c</fullName>
    <formula>IF(
NOT(CONTAINS(Product__r.Name,&quot;subsidy&quot;))
&amp;&amp;
(EffectiveEndDate__c &lt; TODAY() || (Status__c != &quot;Active&quot; &amp;&amp; EffectiveStartDate__c &lt; TODAY()))
&amp;&amp; (
Product__r.ProductCategory__r.ProductType__c = &quot;POS Service&quot;
||
Product__r.ProductCategory__r.ProductType__c = &quot;POS Device&quot;
||
Product__r.ProductCategory__r.ProductType__c = &quot;POS Service+Device&quot;
),1,0)</formula>
    <label>Status Past Customer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>