force-app/main/default/objects/SubscriptionLineItem__c/fields/Status_Past_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_Past_Date__c</fullName>
    <formula>IF ( Status_Past_Customer__c &gt; 0 &amp;&amp; TEXT(Subscription__r.Account__r.Account_Status__c) = &apos;Lost Customer&apos;, 
IF(ISBLANK(EffectiveEndDate__c),EffectiveStartDate__c,EffectiveEndDate__c)
,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Past Date</label>
    <type>Date</type>
</CustomField>