force-app/main/default/objects/SubscriptionLineItem__c/fields/SupercedingSLI__c.field-meta.xml
<CustomField>
    <fullName>SupercedingSLI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Superceding SLI</label>
    <referenceTo>SubscriptionLineItem__c</referenceTo>
    <relationshipLabel>Subscription Line Items (Superceding SLI)</relationshipLabel>
    <relationshipName>SupercedingSLIs</relationshipName>
    <type>Lookup</type>
</CustomField>