force-app/main/default/objects/SubscriptionLineItem__c/fields/UpdatedDateZuora__c.field-meta.xml
<CustomField>
    <fullName>UpdatedDateZuora__c</fullName>
    <label>UpdatedDateZuora</label>
    <type>DateTime</type>
</CustomField>