force-app/main/default/objects/SubscriptionLineItem__c/fields/Version_Key__c.field-meta.xml
<CustomField>
    <fullName>Version_Key__c</fullName>
    <formula>Name &amp; &quot;:&quot; &amp; TEXT(Subscription__r.Version__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Version Key</label>
    <type>Text</type>
</CustomField>