force-app/main/default/objects/SubscriptionLineItem__c/fields/ZuoraName__c.field-meta.xml
<CustomField>
    <fullName>ZuoraName__c</fullName>
    <externalId>true</externalId>
    <label>Zuora Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>