force-app/main/default/objects/SubscriptionLineItem__c/fields/ZuoraSubCategoryId__c.field-meta.xml
<CustomField>
    <fullName>ZuoraSubCategoryId__c</fullName>
    <externalId>true</externalId>
    <label>ZuoraSubCategoryId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>